# dagster-and-dbt

./: .gitignore  infra.py  pyproject.toml  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
analytics/: .user.yml  dbt_project.yml  profiles.yml
analytics/models/sources/: raw_taxis.yml
analytics/models/staging/: src_taxis.yml
dagster_and_dbt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dagster_university/: __init__.py  project.py
dagster_university/assets/: chicago_crimes.py  constants.py  dbt.py  metrics.py  trips.py
dagster_university/jobs/: __init__.py
dagster_university/resources/: __init__.py
dagster_university/schedules/: __init__.py
data/raw/: taxi_zones.csv
data/staging/: manhattan_stats.geojson
dlt_sources/chicago_crimes/: __init__.py
tmp4i25gqz1/history/: runs.db
tmp4i25gqz1/history/runs/: 0c3dc19b-b6e4-4bd5-a08b-da2785297c56.db  0d3c7e2d-d735-4ea7-93e7-a9106188f5ba.db  2ffae9b3-9fdb-4dc5-aa4b-fb83ed0339f9.db  363f6bfc-8fdb-4a17-860c-1193c93ac628.db  3cc797ef-86a2-4d1c-ba53-27b5f61276ba.db  52404355-9d55-4dcc-a2ec-2565a5729410.db  581dfbb8-6641-4877-a637-2858444d595c.db  5cd025c9-7b66-4c65-bbee-42edc6ed2cda.db  5f14da2b-6874-48b4-89e3-e60148bce70d.db  633aabfb-2809-4296-8ada-a05e28588e71.db  65784170-b6bc-40ea-aed6-470cd94d970f.db  6d1d5b03-fa6c-4291-94ff-0f31fa171af4.db  6d6c3975-1c66-4c85-af78-d0bc21342a16.db  739b0ad3-b532-49df-8e80-f3d2fbf0a6d7.db  8e176872-8673-460f-b141-8d8d52f52f1e.db  95160e3a-a961-480b-b849-ce95f085fc7b.db  9550d105-adfb-40ac-86e2-e463333c1243.db  (+5 more)
tmp4i25gqz1/schedules/: schedules.db
(+74 files in other folders)
