[project]
name = "dagster-and-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "dagster-cloud>=1.9.11",
    "dagster>=1.9.11",
    "dagster-duckdb>=0.25.11",
    "dagster-dbt>=0.25.11",
    "dbt-duckdb>=1.9.1",
    "geopandas>=1.0.1",
    "kaleido==0.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "shapely>=2.0.7",
    "smart-open>=7.1.0",
    "s3fs>=2025.2.0",
    "boto3>=1.36.3",
    "pyarrow>=19.0.0",
    "dagster-webserver>=1.9.11",
    "pytest>=8.3.4",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_university"

[tool.setuptools]
packages = ["dagster_university"]